lunches history in `localStorage` and sorting to put those in the end.

--- a/lunch-together/src/PokemonPicker.module.scss
+++ b/lunch-together/src/PokemonPicker.module.scss
@@ -1,7 +1,3 @@
-/*
- * Replace this with your own classes
- *
- * e.g.
- * .container {
- * }
-*/
+.container{
+  nav{ display:flex; flex-wrap:wrap; height: 10.6rem; overflow: auto; }
+}
